# vecpaper

./: README.md  meson.build
examples/: rotate_i.glsl  voronoi_on_sphere.glsl  warp.glsl
include/: argparse.h
include/glad/: egl.h  gl.h
src/: argparse.c  main.c
